ci: #863gxmf5j: test deploy to prod k8s

--- a/.github/workflows/dev-docker-publish.yml
+++ b/.github/workflows/dev-docker-publish.yml
@@ -50,6 +50,10 @@ jobs:
             --set "extraSecretEnvVars.HttpUrls__EmployeeServiceUrl=${{ vars.EMPLOYEE_SERVICE_URL }}" \
             --set "extraSecretEnvVars.AccountValidationOptions__CorporateEmailDomain=${{ vars.CORPORATE_EMAIL_DOMAIN }}" \
             --set "extraSecretEnvVars.AccountValidationOptions__IgnoreCorporateDomainValidationRule=${{ vars.IGNORE_CORPORATE_DOMAIN_VALIDATION_RULE }}" \
+            --set "resources.limits.cpu=${{ vars.APP_CPU_LIMIT }}" \
+            --set "resources.limits.memory=${{ vars.APP_MEMORY_LIMIT }}" \
+            --set "resources.requests.cpu=${{ vars.APP_CPU_REQUESTS }}" \
+            --set "resources.requests.memory=${{ vars.APP_MEMORY_REQUESTS }}" \
             "${RELEASE_NAME}" \
             bitnami/aspnet-core
           kubeconfig: "${{ secrets.KUBECONFIG }}"
@@ -80,6 +84,10 @@ jobs:
             --set "extraSecretEnvVars.HttpUrls__EmployeeServiceUrl=${{ vars.EMPLOYEE_SERVICE_URL }}" \
             --set "extraSecretEnvVars.AccountValidationOptions__CorporateEmailDomain=${{ vars.CORPORATE_EMAIL_DOMAIN }}" \
             --set "extraSecretEnvVars.AccountValidationOptions__IgnoreCorporateDomainValidationRule=${{ vars.IGNORE_CORPORATE_DOMAIN_VALIDATION_RULE }}" \
+            --set "resources.limits.cpu=${{ vars.APP_CPU_LIMIT }}" \
+            --set "resources.limits.memory=${{ vars.APP_MEMORY_LIMIT }}" \
+            --set "resources.requests.cpu=${{ vars.APP_CPU_REQUESTS }}" \
+            --set "resources.requests.memory=${{ vars.APP_MEMORY_REQUESTS }}" \
             "${RELEASE_NAME}" \
             bitnami/aspnet-core
           kubeconfig: "${{ secrets.KUBECONFIG }}"
